tests/integration/snapshots/integration__commands__format__uglify_ARRAY_SUBARRAYS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[["a"], [true, false]]
stdout ---
[["a"],[true,false]]

stderr ---
