tests/integration/snapshots/integration__commands__format__uglify_EXPONENT_UPPERCASE_E.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
429E6
stdout ---
429E6

stderr ---
