tests/integration/snapshots/integration__commands__format__uglify_EXPONENT_UPPERCASE_E_PLUS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
1E+10
stdout ---
1e10

stderr ---
