tests/integration/snapshots/integration__commands__format__uglify_EXPONENT_WITH_MINUS_SIGN.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
429e-6
stdout ---
429e-6

stderr ---
