tests/integration/snapshots/integration__commands__format__uglify_EXPONENT_ZERO_PADDED.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
1e00
stdout ---
1e00

stderr ---
