tests/integration/snapshots/integration__commands__format__uglify_EXPONENT_ZERO_PADDED_MINUS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
2e-00
stdout ---
2

stderr ---
